// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExpensesSummary /> should display the summary of multiple filtered items correctly 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      You are viewing 
      <span>
        3
      </span>
       
      expenses
       totaling 
      <span>
        $5.90
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Create an Expense
      </Link>
    </div>
  </div>
</div>
`;

exports[`<ExpensesSummary /> should display the summary of one filtered item correctly 1`] = `
<div
  className="page-header"
>
  <div
    className="content-container"
  >
    <h1
      className="page-header__title"
    >
      You are viewing 
      <span>
        1
      </span>
       
      expense
       totaling 
      <span>
        $0.50
      </span>
    </h1>
    <div
      className="page-header__actions"
    >
      <Link
        className="button"
        replace={false}
        to="/create"
      >
        Create an Expense
      </Link>
    </div>
  </div>
</div>
`;
